force-app/main/default/objects/RecordTypeId__c/RecordTypeId__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Record Type Id</description>
    <label>RecordTypeId</label>
</CustomObject>