force-app/main/default/objects/RecordTypeId__c/fields/AATReview__c.field-meta.xml
<CustomField>
    <fullName>AATReview__c</fullName>
    <label>AATReview</label>
    <length>18</length>
    <type>Text</type>
</CustomField>