force-app/main/default/objects/RecordTypeId__c/fields/Account_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Person_Account__c</fullName>
    <label>Account Person Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>