force-app/main/default/objects/RecordTypeId__c/fields/App_Application_Submission_Receipt__c.field-meta.xml
<CustomField>
    <fullName>App_Application_Submission_Receipt__c</fullName>
    <label>App Application Submission Receipt</label>
    <length>18</length>
    <type>Text</type>
</CustomField>