force-app/main/default/objects/RecordTypeId__c/fields/App_Taken_To_Be_Approved__c.field-meta.xml
<CustomField>
    <fullName>App_Taken_To_Be_Approved__c</fullName>
    <label>App Taken To Be Approved</label>
    <length>18</length>
    <type>Text</type>
</CustomField>