force-app/main/default/objects/RecordTypeId__c/fields/AR_ACO_to_Account__c.field-meta.xml
<CustomField>
    <fullName>AR_ACO_to_Account__c</fullName>
    <label>AR ACO to Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>