force-app/main/default/objects/RecordTypeId__c/fields/AR_Organisation_Owner__c.field-meta.xml
<CustomField>
    <fullName>AR_Organisation_Owner__c</fullName>
    <label>AR Organisation Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>