force-app/main/default/objects/RecordTypeId__c/fields/AR_Provider_to_MC__c.field-meta.xml
<CustomField>
    <fullName>AR_Provider_to_MC__c</fullName>
    <label>AR Provider to MC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>