force-app/main/default/objects/RecordTypeId__c/fields/Case_Information__c.field-meta.xml
<CustomField>
    <fullName>Case_Information__c</fullName>
    <label>Case Information</label>
    <length>18</length>
    <type>Text</type>
</CustomField>