force-app/main/default/objects/RecordTypeId__c/fields/Case_Reconsideran__c.field-meta.xml
<CustomField>
    <fullName>Case_Reconsideran__c</fullName>
    <label>Case Reconsideran</label>
    <length>18</length>
    <type>Text</type>
</CustomField>