force-app/main/default/objects/RecordTypeId__c/fields/Comment_Account__c.field-meta.xml
<CustomField>
    <fullName>Comment_Account__c</fullName>
    <label>Comment Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>