force-app/main/default/objects/RecordTypeId__c/fields/Comment_Application__c.field-meta.xml
<CustomField>
    <fullName>Comment_Application__c</fullName>
    <label>Comment Application</label>
    <length>18</length>
    <type>Text</type>
</CustomField>