force-app/main/default/objects/RecordTypeId__c/fields/Comment_Contact__c.field-meta.xml
<CustomField>
    <fullName>Comment_Contact__c</fullName>
    <label>Comment Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>