force-app/main/default/objects/RecordTypeId__c/fields/Comment_CR__c.field-meta.xml
<CustomField>
    <fullName>Comment_CR__c</fullName>
    <label>Comment CR</label>
    <length>18</length>
    <type>Text</type>
</CustomField>