force-app/main/default/objects/RecordTypeId__c/fields/Comment_Service__c.field-meta.xml
<CustomField>
    <fullName>Comment_Service__c</fullName>
    <label>Comment Service</label>
    <length>18</length>
    <type>Text</type>
</CustomField>