force-app/main/default/objects/RecordTypeId__c/fields/CR_A_L__c.field-meta.xml
<CustomField>
    <fullName>CR_A_L__c</fullName>
    <label>CR A/L</label>
    <length>18</length>
    <type>Text</type>
</CustomField>