force-app/main/default/objects/RecordTypeId__c/fields/CR_CC__c.field-meta.xml
<CustomField>
    <fullName>CR_CC__c</fullName>
    <label>CR CC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>