force-app/main/default/objects/RecordTypeId__c/fields/CR_KP__c.field-meta.xml
<CustomField>
    <fullName>CR_KP__c</fullName>
    <label>CR KP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>