force-app/main/default/objects/RecordTypeId__c/fields/CR_OC__c.field-meta.xml
<CustomField>
    <fullName>CR_OC__c</fullName>
    <label>CR OC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>