force-app/main/default/objects/RecordTypeId__c/fields/CR_Owner__c.field-meta.xml
<CustomField>
    <fullName>CR_Owner__c</fullName>
    <label>CR Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>