force-app/main/default/objects/RecordTypeId__c/fields/CR_POC__c.field-meta.xml
<CustomField>
    <fullName>CR_POC__c</fullName>
    <label>CR POC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>