force-app/main/default/objects/RecordTypeId__c/fields/CT_Approved_Provider__c.field-meta.xml
<CustomField>
    <fullName>CT_Approved_Provider__c</fullName>
    <label>CT Approved Provider</label>
    <length>18</length>
    <type>Text</type>
</CustomField>