force-app/main/default/objects/RecordTypeId__c/fields/CT_CHSP__c.field-meta.xml
<CustomField>
    <fullName>CT_CHSP__c</fullName>
    <label>CT CHSP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>