force-app/main/default/objects/RecordTypeId__c/fields/CT_NATSIFAC__c.field-meta.xml
<CustomField>
    <fullName>CT_NATSIFAC__c</fullName>
    <label>CT NATSIFAC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>