force-app/main/default/objects/RecordTypeId__c/fields/Provider_to_Service__c.field-meta.xml
<CustomField>
    <fullName>Provider_to_Service__c</fullName>
    <label>Provider to Service</label>
    <length>18</length>
    <type>Text</type>
</CustomField>