force-app/main/default/objects/RecordTypeId__c/fields/Reconsideration__c.field-meta.xml
<CustomField>
    <fullName>Reconsideration__c</fullName>
    <label>Reconsideration</label>
    <length>18</length>
    <type>Text</type>
</CustomField>